fix: btn ver mas wrap

--- a/src/components/feature/screens/ListItemScreen/ListItemScreen.module.css
+++ b/src/components/feature/screens/ListItemScreen/ListItemScreen.module.css
@@ -2,3 +2,7 @@
     display: flex;
     gap: 5px;
 }
+
+.btn{
+    white-space: nowrap !important;
+}
